--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "recompose": "^0.17.0",
     "redux": "^4.2.1",
     "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.9",
     "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.0.3",
